<resources>
    <string name="app_name">Profile</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="likes">Likes</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="md_mazlan">Md Mazlan</string>
    <string name="profile">Profile</string>
</resources>